--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "element-ui": "^2.4.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-amap": "^0.5.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
@@ -20,7 +21,9 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "axios": "^0.18.0",
+    "font-awesome": "^4.7.0"
   },
   "eslintConfig": {
     "root": true,
@@ -31,9 +34,14 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": 1
+    },
     "parserOptions": {
       "parser": "babel-eslint"
+    },
+    "globals": {
+      "AMap": false
     }
   },
   "postcss": {
